--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,8 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+		<div>
+            <p>Bonjour je m'appelle Kouam Orchelle et je suis étudiante</p>
+        </div>
 	
 </body></html>
