--- a/hello.html
+++ b/hello.html
@@ -16,8 +16,15 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+        <!--description-->
 		<div>
+            <h1>Ma description</h1>
             <p>Bonjour je m'appelle Kouam Orchelle et je suis étudiante</p>
         </div>
-	
+
+	<!--recompenses-->
+		<div>
+            <h1>Mes récompenses</h1>
+            <p>En construction...</p>
+        </div>
 </body></html>
