--- a/hello.html
+++ b/hello.html
@@ -25,7 +25,7 @@
 	<!--recompenses-->
 		<div>
             <h1>Mes récompenses</h1>
-            <p>En construction...</p>
+            <p><img src="images/medal_bronze.png" alt=""></p>
         </div>
 
         <!--mon gist-->
