ajout commande git pull

--- a/hello.html
+++ b/hello.html
@@ -35,4 +35,10 @@
             <p><script src="https://gist.github.com/kouaml/3893c8105ef5c4bf9511e7bde22c45c8.js"></script></p>
         </div>
         
+        <!--commandes git-->
+		<div>
+            <h1>Mes commandes git</h1>
+            <p> git pull</p>
+        </div>
+        
 </body></html>
